# django-handleref

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.yaml  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  codeql.yml  tests.yml
Ctl/: config.yml  requirements.txt  tmplvars.yaml
config/: requirements-test.txt  requirements.txt
django_handleref/: admin.py  manager.py  models.py  util.py
django_handleref/rest/: serializers.py
django_handleref/templates/handleref/: object_history.html  version_details.html  version_revert.html  version_rollback.html
django_handleref/templates/handleref/grappelli/: object_history.html  version_details.html  version_revert.html  version_rollback.html
django_syncref/: manager.py  models.py
django_syncref/rest/: serializers.py
docs/: index.md  quickstart.md
docs/api/: django_handleref.admin.md  django_handleref.manager.md  django_handleref.util.md  django_handleref.version.md
src/django_handleref/: admin.py  manager.py  models.py  util.py  version.py
src/django_handleref/rest/: serializers.py
src/django_handleref/templates/handleref/grappelli/: object_history.html  version_details.html
tests/: conftest.py  models.py  reversion_models.py  test_datetime_fields.py  test_manager.py  test_models.py  test_utils.py  test_version.py  test_version_admin.py  urls.py
