[tool.poetry]
name = "django-handleref"
version = "2.0.0"
description = "django object tracking"
readme = "README.md"
repository = "https://github.com/20c/django-handleref"
authors = ["20C <code@20c.com>"]
license = "Apache-2.0"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

packages = [{ include = "django_handleref", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
# testing
django-reversion = ">=3"
pytest = ">=6.0.1"
pytest-django = ">=3.8.0"
pytest-cov = "*"
pytest-pythonpath = "*"
tox = ">=3.24"
tox-gh-actions = ">=2.9.1"

# linting
black = { version = ">=20", allow-prereleases = true }
isort = "^5.7.0"
flake8 = "^3.8.4"
mypy = ">=0.950"
pre-commit = "^2.13"
pyupgrade = "^2.19.4"

# ctl
ctl = "^1"
jinja2 = "^3.1.2"
tmpl = "^1"
twine = "^3.3.0"

# docs
markdown-include = ">=0.5"
mkdocs = "^1.2.3"
pymdgen = "^1.0.0"

[tool.poetry.extras]
docs = ["markdown-include", "mkdocs", "pymdgen"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
